--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div class="col-md-2">
         <div class="well">
           <h5>Test Subject ID No.:</h5>
-          <select names.id="selDataset" onchange="optionChanged(this.value)"></select>
+          <select id="selDataset" onchange="optionChanged(this.value)"></select>
         </div>
         <div class="panel panel-primary">
           <div class="panel-heading">
@@ -50,8 +50,9 @@
   <script src="./static/js/app.js"></script>
   <script src="./static/js/app1.js"></script>
   <script src="./static/js/app2.js"></script>
+  <script src="./static/js/populateDropdown.js"></script>
   <script src="./static/js/bonus.js"></script>
-  <script src="./static/js/d3json.js"></script>  
+  
 
 </body>
 
